# cliodb

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  TODO  build.rs  clio.py  load.py  logos.py  query_examples.md
cliodb-ffi/: Cargo.toml
cliodb-ffi/src/: lib.rs
logos-ffi/: Cargo.toml
logos-ffi/src/: lib.rs
logos-transactor/: Cargo.toml
logos-transactor/src/: main.rs
src/: btree.rs  conn.rs  datalog.rs  db.rs  durable.rs  durable_tree.rs  ident.rs  index.rs  lib.rs  main.rs  model.rs  network.rs  parser.lalrpop  parser.rs  print_table.rs  query.rs  rbtree.rs  schema.rs  server.rs  string_ref.rs  tx.rs
src/backends/: cassandra.rs  mem.rs  mod.rs  mysql.rs  sqlite.rs
src/datalog/: ast.rs  mod.rs  query.rs
src/queries/: ast.rs  execution.rs  mod.rs  planner.rs  query.rs
