[package]
authors = ["Logan Buckley <logan.buckley@gmail.com>"]
name = "logos"
version = "0.1.0"

[dependencies]
bytes = "0.4"
chrono = { version = "0.4.9", features = ["serde"] }
clap = "2.25.0"
combine = "2.3.2"
futures = "0.1"
itertools = "0.6.0"
im = { version = "12.2.0", features = ["serde"] }
lazy_static = "1.4.0"
lru-cache = "0.1.1"
mysql = "14.1.0"
prettytable-rs = "0.6.6"
rmp-serde = "0.13.4"
rusqlite = "0.21.0"
rustyline = "1.0.0"
serde = "1.0.8"
serde_derive = "1.0.8"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.5.0", features = ["v4"] }

[dev-dependencies]
proptest = "0.8.7"